src/main/gen/io/kadena/pact/intellij/language/parser/PactParser.java
// This is a generated file. Not intended for manual editing.
package io.kadena.pact.intellij.language.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static io.kadena.pact.intellij.language.psi.PactTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class PactParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return program(b, l + 1);
  }

  /* ********************************************************** */
  // uc_letter | lc_letter | number
  public static boolean alphanumeric(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alphanumeric")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ALPHANUMERIC, "<alphanumeric>");
    r = uc_letter(b, l + 1);
    if (!r) r = lc_letter(b, l + 1);
    if (!r) r = number(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ident [colon ident]
  public static boolean arg(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARG, "<arg>");
    r = ident(b, l + 1);
    r = r && arg_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [colon ident]
  private static boolean arg_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_1")) return false;
    arg_1_0(b, l + 1);
    return true;
  }

  // colon ident
  private static boolean arg_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = colon(b, l + 1);
    r = r && ident(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // { arg }
  public static boolean arg_rest(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arg_rest")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARG_REST, "<arg rest>");
    r = arg(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // type_ann | let_bind | let_star_bind | atom2
  public static boolean atom(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ATOM, "<atom>");
    r = type_ann(b, l + 1);
    if (!r) r = let_bind(b, l + 1);
    if (!r) r = let_star_bind(b, l + 1);
    if (!r) r = atom2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ident | lit | op
  public static boolean atom2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom2")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ATOM_2, "<atom 2>");
    r = ident(b, l + 1);
    if (!r) r = lit(b, l + 1);
    if (!r) r = op(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'bless'
  public static boolean bless(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bless")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BLESS, "<bless>");
    r = consumeToken(b, "bless");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // bless hash
  public static boolean bless_decl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bless_decl")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BLESS_DECL, "<bless decl>");
    r = bless(b, l + 1);
    r = r && hash(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'true' | 'false'
  public static boolean bool(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bool")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, BOOL, "<bool>");
    r = consumeToken(b, "true");
    if (!r) r = consumeToken(b, "false");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ':'
  public static boolean colon(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "colon")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COLON, "<colon>");
    r = consumeToken(b, ":");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ','
  public static boolean comma(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comma")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMMA, "<comma>");
    r = consumeToken(b, ",");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // expr comma_delimited_rest | ε
  public static boolean comma_delimited_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comma_delimited_list")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMMA_DELIMITED_LIST, "<comma delimited list>");
    r = comma_delimited_list_0(b, l + 1);
    if (!r) r = consumeToken(b, Ε);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // expr comma_delimited_rest
  private static boolean comma_delimited_list_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comma_delimited_list_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expr(b, l + 1);
    r = r && comma_delimited_rest(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // comma expr | ε
  public static boolean comma_delimited_rest(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comma_delimited_rest")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMMA_DELIMITED_REST, "<comma delimited rest>");
    r = comma_delimited_rest_0(b, l + 1);
    if (!r) r = consumeToken(b, Ε);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // comma expr
  private static boolean comma_delimited_rest_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "comma_delimited_rest_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = comma(b, l + 1);
    r = r && expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // [ sub ] numbers dot numbers
  public static boolean decimal(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decimal")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DECIMAL, "<decimal>");
    r = decimal_0(b, l + 1);
    r = r && numbers(b, l + 1);
    r = r && dot(b, l + 1);
    r = r && numbers(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [ sub ]
  private static boolean decimal_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decimal_0")) return false;
    sub(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // defun_decl | defconst_decl | defcap_decl | defpact_decl | defschema_decl |
  //            deftable_decl | bless_decl
  public static boolean decl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decl")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DECL, "<decl>");
    r = defun_decl(b, l + 1);
    if (!r) r = defconst_decl(b, l + 1);
    if (!r) r = defcap_decl(b, l + 1);
    if (!r) r = defpact_decl(b, l + 1);
    if (!r) r = defschema_decl(b, l + 1);
    if (!r) r = deftable_decl(b, l + 1);
    if (!r) r = bless_decl(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // imports decls
  public static boolean decl_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decl_list")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DECL_LIST, "<decl list>");
    r = imports(b, l + 1);
    r = r && decls(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // lparen decl rparen { lparen decl rparen }
  public static boolean decls(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decls")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DECLS, "<decls>");
    r = lparen(b, l + 1);
    r = r && decl(b, l + 1);
    r = r && rparen(b, l + 1);
    r = r && decls_3(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // lparen decl rparen
  private static boolean decls_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decls_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = lparen(b, l + 1);
    r = r && decl(b, l + 1);
    r = r && rparen(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // 'defcap'
  public static boolean defcap(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defcap")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DEFCAP, "<defcap>");
    r = consumeToken(b, "defcap");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // defcap ident lparen fun_args rparen doc_or_meta expr
  public static boolean defcap_decl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defcap_decl")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DEFCAP_DECL, "<defcap decl>");
    r = defcap(b, l + 1);
    r = r && ident(b, l + 1);
    r = r && lparen(b, l + 1);
    r = r && fun_args(b, l + 1);
    r = r && rparen(b, l + 1);
    r = r && doc_or_meta(b, l + 1);
    r = r && expr(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'defconst'
  public static boolean defconst(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defconst")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DEFCONST, "<defconst>");
    r = consumeToken(b, "defconst");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // defconst ident expr
  public static boolean defconst_decl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defconst_decl")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DEFCONST_DECL, "<defconst decl>");
    r = defconst(b, l + 1);
    r = r && ident(b, l + 1);
    r = r && expr(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'defpact'
  public static boolean defpact(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defpact")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DEFPACT, "<defpact>");
    r = consumeToken(b, "defpact");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // defpact ident lparen fun_args rparen doc_or_meta { step_decl }
  public static boolean defpact_decl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defpact_decl")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DEFPACT_DECL, "<defpact decl>");
    r = defpact(b, l + 1);
    r = r && ident(b, l + 1);
    r = r && lparen(b, l + 1);
    r = r && fun_args(b, l + 1);
    r = r && rparen(b, l + 1);
    r = r && doc_or_meta(b, l + 1);
    r = r && defpact_decl_6(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // { step_decl }
  private static boolean defpact_decl_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defpact_decl_6")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = step_decl(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // 'defschema'
  public static boolean defschema(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defschema")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DEFSCHEMA, "<defschema>");
    r = consumeToken(b, "defschema");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // defschema ident doc_or_meta fields
  public static boolean defschema_decl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defschema_decl")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DEFSCHEMA_DECL, "<defschema decl>");
    r = defschema(b, l + 1);
    r = r && ident(b, l + 1);
    r = r && doc_or_meta(b, l + 1);
    r = r && fields(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // 'deftable'
  public static boolean deftable(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "deftable")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DEFTABLE, "<deftable>");
    r = consumeToken(b, "deftable");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // deftable ident [colon ident] doc_or_meta
  public static boolean deftable_decl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "deftable_decl")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DEFTABLE_DECL, "<deftable decl>");
    r = deftable(b, l + 1);
    r = r && ident(b, l + 1);
    r = r && deftable_decl_2(b, l + 1);
    r = r && doc_or_meta(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [colon ident]
  private static boolean deftable_decl_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "deftable_decl_2")) return false;
    deftable_decl_2_0(b, l + 1);
    return true;
  }

  // colon ident
  private static boolean deftable_decl_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "deftable_decl_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = colon(b, l + 1);
    r = r && ident(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // 'defun'
  public static boolean defun(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defun")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DEFUN, "<defun>");
    r = consumeToken(b, "defun");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // defun lparen fun_args rparen doc_or_meta expr
  public static boolean defun_decl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defun_decl")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DEFUN_DECL, "<defun decl>");
    r = defun(b, l + 1);
    r = r && lparen(b, l + 1);
    r = r && fun_args(b, l + 1);
    r = r && rparen(b, l + 1);
    r = r && doc_or_meta(b, l + 1);
    r = r && expr(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // defun lparen fun_args rparen doc_or_meta
  public static boolean defun_sig(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "defun_sig")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DEFUN_SIG, "<defun sig>");
    r = defun(b, l + 1);
    r = r && lparen(b, l + 1);
    r = r && fun_args(b, l + 1);
    r = r && rparen(b, l + 1);
    r = r && doc_or_meta(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '@doc' string
  public static boolean doc(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "doc")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DOC, "<doc>");
    r = consumeToken(b, "@doc");
    r = r && string(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // doc mta | mta | ε
  public static boolean doc_or_meta(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "doc_or_meta")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DOC_OR_META, "<doc or meta>");
    r = doc_or_meta_0(b, l + 1);
    if (!r) r = mta(b, l + 1);
    if (!r) r = consumeToken(b, Ε);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // doc mta
  private static boolean doc_or_meta_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "doc_or_meta_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = doc(b, l + 1);
    r = r && mta(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // '.'
  public static boolean dot(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "dot")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DOT, "<dot>");
    r = consumeToken(b, ".");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // ';;'
  public static boolean double_semicolon(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "double_semicolon")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DOUBLE_SEMICOLON, "<double semicolon>");
    r = consumeToken(b, ";;");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // lparen ne_expr_list rparen | atom
  public static boolean expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPR, "<expr>");
    r = expr_0(b, l + 1);
    if (!r) r = atom(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // lparen ne_expr_list rparen
  private static boolean expr_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expr_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = lparen(b, l + 1);
    r = r && ne_expr_list(b, l + 1);
    r = r && rparen(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ident colon ident
  public static boolean field(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "field")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FIELD, "<field>");
    r = ident(b, l + 1);
    r = r && colon(b, l + 1);
    r = r && ident(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // { field }
  public static boolean fields(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fields")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FIELDS, "<fields>");
    r = field(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // arg arg_rest
  public static boolean fun_args(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "fun_args")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FUN_ARGS, "<fun args>");
    r = arg(b, l + 1);
    r = r && arg_rest(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // { alphanumeric }
  public static boolean hash(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "hash")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, HASH, "<hash>");
    r = alphanumeric(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // lsquare { hash } rsquare
  public static boolean hashes(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "hashes")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, HASHES, "<hashes>");
    r = lsquare(b, l + 1);
    r = r && hashes_1(b, l + 1);
    r = r && rsquare(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // { hash }
  private static boolean hashes_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "hashes_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = hash(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // letter { (sub | letter | number) }
  public static boolean ident(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ident")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, IDENT, "<ident>");
    r = letter(b, l + 1);
    r = r && ident_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // sub | letter | number
  private static boolean ident_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ident_1")) return false;
    boolean r;
    r = sub(b, l + 1);
    if (!r) r = letter(b, l + 1);
    if (!r) r = number(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // 'implements'
  public static boolean implements_$(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "implements_$")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, IMPLEMENTS, "<implements $>");
    r = consumeToken(b, "implements");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // implements ident
  public static boolean implements_decl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "implements_decl")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, IMPLEMENTS_DECL, "<implements decl>");
    r = implements_$(b, l + 1);
    r = r && ident(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // lparen use_decl rparen { lparen use_decl rparen }
  public static boolean imports(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "imports")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, IMPORTS, "<imports>");
    r = lparen(b, l + 1);
    r = r && use_decl(b, l + 1);
    r = r && rparen(b, l + 1);
    r = r && imports_3(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // lparen use_decl rparen
  private static boolean imports_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "imports_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = lparen(b, l + 1);
    r = r && use_decl(b, l + 1);
    r = r && rparen(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // [ sub ] numbers
  public static boolean integer(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "integer")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, INTEGER, "<integer>");
    r = integer_0(b, l + 1);
    r = r && numbers(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [ sub ]
  private static boolean integer_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "integer_0")) return false;
    sub(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // 'interface'
  public static boolean interface_$(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "interface_$")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, INTERFACE, "<interface $>");
    r = consumeToken(b, "interface");
    exit_section_(b, l, m, r, false, null);
    return r;
  }
